<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3A3A3A"
    >
    <ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:src="@drawable/banner" android:layout_width="wrap_content"></ImageView>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/labelUsernameInfo" android:text="@string/labelUsernameInfoString"></TextView>
<TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
    <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="50dip">
        <EditText android:inputType="textPersonName" android:layout_height="wrap_content" android:id="@+id/editUsername" android:layout_width="125dip">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="@string/labelHostInfoString" android:id="@+id/labelHostInfo"></TextView>
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/labelPortInfo" android:text="@string/labelPortInfoString"></TextView>
    </TableRow>
    <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:inputType="textPersonName" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/editHost"></EditText>
        </LinearLayout>
        <EditText android:inputType="number" android:layout_height="wrap_content" android:id="@+id/editPort" android:layout_width="80dip"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnConnect" android:text="@string/btnConnectString"></Button>
        <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/labelCheckSaved" android:id="@+id/chkSaved"></CheckBox>
    </TableRow>
</TableLayout>
</LinearLayout>
